# QtUSB

./: .gitignore  CMakeLists.txt  README.md  threadmanage.cpp  threadmanage.h
cmake/: QtUsbConfig.cmake.in
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  main.cpp
include/QtUsb/: datatypes.h  libusb.h  qtusb_export.h  usbdevice.h  usbdevmanager.h
src/: datatypes.cpp  datatypes.h  usb_namespace.h
src/datatypes/: datatypes.cpp
src/descriptor/: descriptorbase.cpp  descriptorbase.h  usbdescriptor.cpp  usbdescriptor.h
src/descriptor/configuration/: configdesc.cpp  configdesc.h
src/descriptor/descriptorbase/: descriptorbase.cpp  descriptorbase.h  descriptordata.cpp  descriptordata.h
src/descriptor/device/: devicedesc.cpp  devicedesc.h
src/descriptor/endpoint/: endpointdesc.cpp  endpointdesc.h
src/descriptor/interface/: interfacealter.cpp  interfacealter.h  interfacedesc.cpp  interfacedesc.h
src/iocommand/: iocommand.cpp  iocommand.h
src/transfer/: transfercontext.cpp  transfercontext.h
src/transfer/impl/: strategybase.cpp  strategybase.h
src/transfer/impl/sync/bulk/: syncbulktransfer.cpp  syncbulktransfer.h
src/transfer/impl/sync/control/: synccontroltransfer.cpp  synccontroltransfer.h
src/transfer/impl/sync/interrupt/: syncintertransfer.cpp  syncintertransfer.h
src/usbdevice/: usbdevice.cpp  usbdevice.h
src/usbdevmanager/: usbdevmanager.cpp
src/usbmonitor/: usbmonitor.cpp  usbmonitor.h
src/usbmonitor/impl/: MonitorThreaded.cpp  MonitorThreaded.h  monitorbase.cpp  monitorbase.h  monitorhotplug.cpp  monitorhotplug.h  monitorthreaded.cpp  monitorthreaded.h  monitorwin.cpp  monitorwin.h
src/utils/: funcdelegate.h
test/: CMakeLists.txt  main.cpp
usbmanager/: CMakeLists.txt  iohelper.cpp  iohelper.h  iomanager.cpp  iomanager.h  usbdevice.cpp  usbdevice.h  usbinfo.cpp  usbinfo.h  usblistener.cpp  usblistener.h  usbmanager.cpp  usbmanager.h
